# redis-app

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  redis.conf
src/redis_app/: __init__.py  app.py  version.py
src/redis_app/functions/: cmd.py
src/redis_app/models/: redis_handler.py
src/redis_app/router/: cmd.py
src/redis_app/utils/: redis_handler.py
