[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "redis_app"
authors = [{ name = "Henning Krause", email = "henning.krause@gft.com" }, ]
maintainers = [{ name = "Henning Krause", email = "henning.krause@gft.com" }, ]
description = "Description"
readme = "README.md"
keywords = []
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["redis"]
requires-python = ">=3.10.6"
dynamic = ["version", "description"]

dependencies = [
    "asyncio",
    "fastapi",
    "requests",
    "urllib3",
    "uvicorn",
    "numpy<2",
    "redis",
    "python-multipart"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flit",
    "pylint",
]

[project.urls]
Homepage = "https://github.com/krauhen/redis-app"
Releases = "https://github.com/krauhen/redis-app/releases"
Issue = "https://github.com/krauhen/redis-app/issues"

[tool.black]
line-length = 88
